# ZBstorage

./: .gitignore  README.md  ZB级冷数据存储架构20250901.pptx  architecture.puml  docker-compose.yml  prometheus.yml
docs/diagrams/: mds_internal.puml  system_overview.puml
include/: MetaServerMetrics.h  StorageResourceAPI.h
src/: CMakeLists.txt  StorageResourceAPI.cpp  readme.md
src/client/app/: CMakeLists.txt  main.cpp  simple_load_test.cpp
src/client/fuse/: CMakeLists.txt  fuse_main.cpp  zb_fuse_main.cpp
src/client/fuse/oldFuse/: CMakeLists.txt  fuse_client.cpp  monitor_client.cpp  readme.md
src/client/mount/: DfsClient.cpp  DfsClient.h  MountConfig.h  RpcClients.cpp  RpcClients.h
src/client/posix/: CMakeLists.txt  dfs_client.cpp  dfs_client.h
src/common/: CMakeLists.txt  StatusUtils.h  monitor_types.hpp  msg_protocol.hpp
src/debug/: ZBLog.cpp  ZBLog.h
src/fs/VFS/: VFS.cpp  VFS.h  VFS_new.cpp  VFS_new.h
src/fs/block/: BlockManager.cpp  BlockManager.h
src/fs/blockstore/: BlockStoreClient.cpp  BlockStoreClient.h
src/fs/handle/: handle.h
src/fs/io/: IIOGateway.h  LocalStorageGateway.cpp  LocalStorageGateway.h
src/fs/volume/: StorageResourceGlobal.cpp  Volume.cpp  Volume.h  VolumeManager.cpp  VolumeManager.h  VolumeRegistry.cpp  VolumeRegistry.h
src/grafana_handle/: CMakeLists.txt  main.cpp  metrics_exporter.cpp  metrics_exporter.h
src/mds/: CMakeLists.txt  MdsServer_stress.cpp  MdsServer_test.cpp
src/mds/allocator/: VolumeAllocator.cpp  VolumeAllocator.h
src/mds/collector/: collector.cpp  collector.h
src/mds/inode/: InodeStorage.cpp  InodeStorage.h  InodeTimestamp.cpp  InodeTimestamp.h  inode.cpp  inode.h
src/mds/metadataserver/: KVStore.cpp  KVStore.h  MetadataManager.cpp  MetadataManager.h  MetadataManager_bulk_test.cpp  MetadataManager_test.cpp  README_demo_kv.md  demo_kv  demo_kv.cpp  demo_kv_rocksdb
src/mds/namespace/: Directory.h
src/mds/server/: DirStore.cpp  DirStore.h  DirectoryLockTable.cpp  DirectoryLockTable.h  Server.cpp  Server.h  ServerMetrics.h
src/mds/stubs/: VolumeAllocatorStub.cpp  VolumeManagerStub.cpp
src/monitor/: readm.md
src/monitor/fuse/: main.cpp  monitor_service.hpp
src/monitor/posix/: CMakeLists.txt  server.cpp
src/msg/: IO.h  todo
src/msg/RPC/: CMakeLists.txt
src/msg/RPC/proto/: mds.proto
src/msg/RPC/server/: mds_service_impl.cpp
src/msg/brpc/: CmakeCmd.txt
src/msg/brpc/simpletest/: CMakeLists.txt  client.cpp  echo.pb.cc  echo.pb.h  echo.proto  server.cpp
src/msg/proto/: CMakeLists.txt  cluster_manager.proto  posix.proto  storage_node.proto
src/msg/socket/: client  client.cpp  server  server.cpp
src/msg/zeromq/: CMakeLists.txt  client.cpp  dispatcher.hpp  messaging_module.cpp  messaging_module.hpp  messenger.hpp  protocol_interface.hpp  router_protocol.hpp  server.cpp  service_interface.hpp  zmsg_interface.hpp
src/srm/: CMakeLists.txt  NodeRegistry.cpp  NodeRegistry.h  StorageNodeManager.cpp  StorageNodeManager.h  main.cpp
src/srm/gateway/: GatewayServiceImpl.cpp  RequestDispatcher.cpp
src/srm/optical_manager/: DiscManager.cpp  DiscManager.h
src/srm/storage_manager/: CMakeLists.txt  StorageResource.cpp  StorageResource.h
src/storagenode/: CMakeLists.txt  StorageNode.h  StorageTypes.h  StoreageNode.cpp
src/storagenode/hard_disc/: Device.h  HDD.cpp  HDD.h  SSD.cpp  SSD.h
src/storagenode/optical/: OpticalDisc.cpp  OpticalDisc.h  OpticalDiscLibrary.cpp  OpticalDiscLibrary.h
src/storagenode/real_node/: CMakeLists.txt
src/storagenode/real_node/agent/: NodeAgent.cpp  NodeAgent.h
src/storagenode/real_node/io/: IOEngine.cpp  IOEngine.h
src/storagenode/real_node/server/: StorageServiceImpl.cpp  StorageServiceImpl.h  real_node_server.cpp
tests/: CMakeLists.txt  fs_bench.cpp  inode_batch_generator.cpp  inode_capacity_sim.cpp  inode_dump.cpp  test_cold_collector.cpp  test_disc_manager.cpp  test_inode_batch.cpp  test_mds_allocator.cpp  test_optical_library.cpp  test_storage_node.cpp  test_vfs_new.cpp
tests/RPC/: CMakeLists.txt
tests/RPC/client/: VFS_dist.cpp
tests/RPC/proto/: mds.proto  rpc_common.proto  storage.proto  vfs.proto
tests/RPC/server/: mds_service_impl.cpp  storage_service_impl.cpp  vfs_service_impl.cpp
tests/optical/: optical_library_roundtrip.cpp
